--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "clear"  : "adb uninstall 'com.powerManagement' && npx react-native run-android", 
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "dev": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
