--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^9.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
