--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modalize": "^2.0.13",
+    "react-native-progress-circle": "^2.1.0",
+    "react-native-reanimated": "^3.0.0-rc.0",
+    "react-native-redash": "^16.3.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-status-bar-height": "^2.6.0",
