--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
+    "ignore-warnings": "^0.2.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.2",
@@ -29,6 +30,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "victory-native": "^36.5.0"
   },
@@ -39,6 +41,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
