--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modalize": "^2.0.13",
+    "react-native-onesignal": "^4.3.11",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-redash": "^16.3.0",
